Backport Amber v10 to 1.20.4 and 1.20.5